<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:label="@string/app_name"
    tools:context="net.game103.ipahelper.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_button_label"
            android:id="@+id/find_button"
            android:textSize="24sp"
            android:padding="40dp"
            android:onClick="goToFind" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compare_button_label"
            android:id="@+id/compare_button"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:padding="40dp"
            android:nestedScrollingEnabled="true"
            android:onClick="goToCompare" />
    </LinearLayout>
</RelativeLayout>
