<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.game103.ipahelper.CompareActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/compare_scroll" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/compare_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/compare_description_label"
                android:id="@+id/compare_description" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/compare_dropdown_layout"></LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/compare_navigate_layout"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/compare_navigate_layout_left_column"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh_button_label"
                        android:id="@+id/compare_refresh_button"
                        android:onClick="refresh" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contrast_button_label"
                        android:id="@+id/compare_contrast_button"
                        android:onClick="contrastFind" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/compare_navigate_layout_right_column"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_plus_button_label"
                        android:id="@+id/compare_plus_button"
                        android:onClick="addNewFilter" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/compare_button_label"
                        android:onClick="compareFind"
                        android:id="@+id/compare_go_button" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
